# aula09_bootcamp

./: dados.parquet  etl.py  exemplo_00.py  log.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  timer.py
